# prog2002-assignment

./: CMakeLists.txt  README.md
assignment/: CMakeLists.txt  main.cpp
assignment/src/: AssignmentApplication.cpp  AssignmentApplication.h  AssignmentShaders.h  CMakeLists.txt  Entity.cpp  Entity.h  Input.cpp  Input.h  Prefabs.h
framework/: CMakeLists.txt
framework/Entity/: CMakeLists.txt  Entity.cpp  Entity.h
framework/GLFWApplication/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.h
framework/GeometricTools/: GeometricTools.h
framework/Input/: CMakeLists.txt  Input.cpp  Input.h
framework/Logger/: CMakeLists.txt  logger.cpp  logger.h
framework/Rendering/: BufferLayout.h  CMakeLists.txt  Camera.h  IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommands.h  RenderingCommands.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  shaders.h
labs/lab2/: CMakeLists.txt  lab2application.cpp  lab2application.h  main.cpp  shaders.h
labs/lab3/: CMakeLists.txt  lab3application.cpp  lab3application.h  main.cpp  shaders.h
